<resources>
    <string name="app_name">CGApp</string>
    <string name="gamek">GameK</string>
    <string name="gamey">GameY</string>
    <string name="clock">Clock</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="ChangeR">ChangeR</string>
    <string name="minute_0">00</string>
    <string name="second_0">:00</string>
    <string name="mill_0">.00</string>
    <string name="btn_start">start</string>
    <string name="btn_pause">pause</string>
    <string name="btn_stop">stop</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="alarm">Alarm</string>
    <string name="clock_main">Clock Main</string>
    <string name="notification_channel_id">Id</string>
    <string name="notification_channel_name">Name</string>
    <string name="notification_channel_description">Description.</string>
    <string name="kws">KWS</string>
    <string name="setting">Setting</string>
    <string name="alarmTitle">Alarm Setting</string>
    <string name="click_setting_button">Click Setting Button</string>
    <string name="click_clock_mod">Click Clock Mod</string>
    <string name="click_any_mod">Click Any Mod</string>
    <string name="clock_game_app"><![CDATA[Clock & Game App]]></string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="textClock">time</string>
    <string name="widget_12_hours_format_h_m">hh:mm aa</string>
    <string name="widget_24_hours_format_h_m">kk:mm aa</string>
    <string name="formmat_y_M_d_E">yyyy MMM dd, EEE</string>
</resources>
