<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Cgapp.AppWidget.Container"
    android:id="@+id/time_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround_TS"
    android:theme="@style/Theme.CGApp.AppWidgetContainer">

    <TextClock
        android:id="@+id/text_month_day"
        style="@style/DateTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:format12Hour="@string/formmat_y_M_d_E"
        android:format24Hour="@string/formmat_y_M_d_E" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_month_day">

        <TextClock
            android:id="@+id/text_clock"
            style="@style/TimeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="@string/widget_12_hours_format_h_m"
            android:format24Hour="@string/widget_24_hours_format_h_m" />

    </RelativeLayout>
</RelativeLayout>