<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".AlarmActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/clock_game_app"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/homeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_any_mod"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clockMainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/normal"
        android:text="@string/clock_main"
        android:textAllCaps="false"
        android:textColor="#959595"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gameKBtn"
        app:layout_constraintTop_toBottomOf="@id/homeText" />

    <Button
        android:id="@+id/gameKBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/normal"
        android:text="@string/gamek"
        android:textAllCaps="false"
        android:textColor="#959595"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeText" />

    <Button
        android:id="@+id/gameYBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/normal"
        android:text="@string/gamey"
        android:textAllCaps="false"
        android:textColor="#959595"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/gameKBtn"
        app:layout_constraintTop_toBottomOf="@id/homeText" />

</androidx.constraintlayout.widget.ConstraintLayout>